De-streamed CommandAPIHandler